# cctxtai

./: .gitignore  Makefile  Readme.MD  pyproject.toml
cctxtai/: runner.py  search.py
cctxtai/model/: embedding.py  hp_embedding.py
cctxtai/preprocessing/: __init__.py  _reader.py  _transform.py  _writer.py  hp_transform.py  reader.py  runner.py  transform.py  types.py  writer.py
cctxtai/utils/: __init__.py  data.py  logging.py
data/00_raw/harry_potter/: chapters.csv
