[tool.poetry]
name = "cctxtai"
version = "0.1.0"
description = ""
authors = ["Philipp Wolters <philipp.wolters@codecentric.de>"]

[tool.poetry.dependencies]
python = "3.8"
txtai = "^4.4.0"
click = "^8.1.2"
PyYAML = "^6.0"
fastparquet = "^0.8.1"
dataclasses-json = "^0.5.7"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
